--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,8 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-#/data/
-# I want to be able to handle links in here...need to exclude certain file types
-# instead
+/data/
+
 
 # Mac OS-specific storage files
 .DS_Store
