start dev1 data request function

--- a/environment.yml
+++ b/environment.yml
@@ -22,4 +22,8 @@ dependencies:
   - pandas
   - netCDF4
   - pip
+  - ipykernel
+  - halo
+  - bs4
+  - munch
 prefix: C:\Users\cooleyky\Anaconda3\envs\qartod_test
